--- a/unlock_success.html
+++ b/unlock_success.html
@@ -32,9 +32,10 @@
     // After a delay (e.g., 10 seconds) redirect back to your loan page/home page
     setTimeout(() => {
       // You can adjust the destination page as needed
-      window.location.href = 'home.html';
+      window.location.href = 'https://applyloan.github.io/APPLYLOAN/signin';
     }, 10000); // 10000ms = 10 seconds
   </script>
 
 </body>
 </html>
+
